# bms_gateway

./: README.md  pyproject.toml
src/bms_gateway/: .bms_state_combiner.py.swp  app.py  app_config.py  bms_config_default.toml  bms_gateway.py  bms_multiplexer.py  bms_state.py  bms_state_combiner.py  lv_bms.py  mqtt_broadcast.py  mqtt_broadcaster.py
src/bms_gateway/include/: text_screen.py
system/: 80-can.network  HOWTO UDEV Rules for Persistent CAN Device Naming.txt  HOWTO UDEV Rules.txt  HOWTO_UDEV_Rules.txt  bms_gateway.service  boot_firmware_config.txt  config.txt_rs485_can_hat  config.txt_rs485_can_hat_b
tools/: candump_stack.dump  candump_stack_inverter.dump  dump_mqtt_state.py  enable_vcan0.sh  enable_vcan0_1_2.sh  replay_can_frames_vcan1.sh  replay_can_frames_vcan2.sh  replay_loop_bms_frames.sh
